--- a/IoTBook/1. 前言/物联网导论/index.html
+++ b/IoTBook/1. 前言/物联网导论/index.html
@@ -624,18 +624,22 @@
 <p>实践出真知，物联网是一个对我们计算机系统的缩影。通过调研，我们也发现现在很多时候讲概念的较多，能让大家实际动手参与其中的学习材料还相对较少。这当然与物联网本身的特性有关，正如我们说过的，物联网设计的范围和知识较广，实际动手来做的话需要涉及的内容又较多，往往莫衷一是、难以取舍。通过了前面研究的积累和跟同学们交流学习的过程中，本课程也试图发展处一套大家都能够参与、能够体会的实验方法。课程的主要特色是结合实际物联网技术，追踪物联网研究前沿技术发展，基于常见的简单物联网设备如移动手机等，使得同学们能够看到物联网技术的实验效果，体会实验的过程。相关内容涉及到物联网通信、定位、感知、系统搭建等不同方面的内容，大部分实验的内容利用手机或者简单的嵌入式设备即可完成，不需要专门的处理设备，解决了传统实验中实验设备较难准备的问题。
 麻雀虽小，五脏俱全，虽然设备相对简单，所涉及的技术和知识面并没有任何的减少，希望通过能够直接参与的实验，促进对技术的深入理解。</p>
 <p>进行这个材料的整理起因是我们自己在物联网的研究过程中积累了很多资料，也碰到了很多问题，在问题的解决过程中也发现了很多人碰到了或者碰到过类似的问题，希望能够将我们的一些实验材料、理解整理到这里，对大家理解物联网能够起到一定的帮助就是万幸。
-当然，我们最终还是希望能够达到以下目标的一部分：
-1. 了解物联网的发展背景和历史
-2.  了解物联网的基本技术
-3.  熟悉物联网主要的发展方向和国际前沿
-4.  熟悉搭建物联网系统</p>
-<p>本材料的适合对象：
-1. 愿意了解物联网的同学
-2. 有志于物联网领域深入研究
-3. 有物联网相关创业计划</p>
+当然，我们最终还是希望能够达到以下目标的一部分：</p>
+<ol>
+<li>了解物联网的发展背景和历史</li>
+<li>了解物联网的基本技术</li>
+<li>熟悉物联网主要的发展方向和国际前沿</li>
+<li>熟悉搭建物联网系统</li>
+</ol>
+<p>本材料的适合对象：</p>
+<ol>
+<li>愿意了解物联网的同学</li>
+<li>有志于物联网领域深入研究</li>
+<li>有物联网相关创业计划</li>
+</ol>
 <blockquote>
-<p>致谢：这个材料是团队努力的成果，得到了团队成员谢鹏瑾、李映辉、徐振强、杨景、宋知朋、童率、王朝和其他成员的大力支持。</p>
-<p>说明：本材料的很多内容都还处于草稿和完善阶段，其中不乏错误和问题，请大家谅解并反馈给我们。</p>
+<p>致谢：这个材料是团队努力的成果，得到了团队成员谢鹏瑾、李映辉、徐振强、杨景、宋知朋、童率、王朝和其他成员的大力支持。
+说明：本材料的很多内容都还处于草稿和完善阶段，其中不乏错误和问题，请大家谅解并反馈给我们。</p>
 </blockquote>
 <p>王继良
 2019年9月</p>
