--- a/CH1_Signal/S5_案例：实现一个录音、放音程序/index.html
+++ b/CH1_Signal/S5_案例：实现一个录音、放音程序/index.html
@@ -1384,7 +1384,7 @@
   <span class="c1">//...//</span>
 <span class="p">}</span>
 </code></pre></div>
-<p>​       在播放声音时，我们仍然需要指定采样率、量化位数、声道数这些参数，并且这些参数要与生成音频文件时使用的参数相同，才能将音频正常播放出来。</p>
+<p>​       在播放声音时，我们仍然需要指定采样率、量化位数、声道数这些参数，并且这些参数要与生成音频文件时使用的参数相同，才能将音频正常播放出来。注意，上述的整个过程，在正常的无线通信的过程中也都存在，但是大家通常都接触不到，希望大家通过这个直观的例子，理解通信中采样和量化的第一步。</p>
 <blockquote>
 <p>大家思考并尝试一下，如果在生成音频时使用的是<span><span class="MathJax_Preview">48 KHz</span><script type="math/tex">48 KHz</script></span>采样率，而在播放时使用<span><span class="MathJax_Preview">24 KHz</span><script type="math/tex">24 KHz</script></span>采样率，播放出来的声音会是什么效果？同样也可以尝试不同的量化位数或者声道数的组合，并解释播放出来的声音和原本正常的声音不同的原因，就可以对信号的接收、生成等过程有更加深入的了解。</p>
 </blockquote>
