--- a/CH6_LoRa/S2_LoRa通信实验/index.html
+++ b/CH6_LoRa/S2_LoRa通信实验/index.html
@@ -1418,7 +1418,7 @@ padding: 2px;">图. Chirp时频图。横坐标为时间，纵坐标为频率。<
 </center> -->
 
 <p><center>
-<img src="./fig/Chirp_freq.png" width="400px">
+<img src="./fig/Chirp.png" width="400px">
 </center>
 <center></p>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
