--- a/12_无线测距/S2_基于传播时间测距/index.html
+++ b/12_无线测距/S2_基于传播时间测距/index.html
@@ -2288,6 +2288,24 @@ sudo ifconfig wlp2s0 up <span class="c1"># 改成当前的网卡接口名称</sp
 
 
               
+              <!-- Default Statcounter code for iot-book
+              http://iot-book.github.io -->
+              <script type="text/javascript">
+                var sc_project=12505397; 
+                var sc_invisible=0; 
+                var sc_security="4085bf0d"; 
+                var scJsHost = "https://";
+                document.write("<sc"+"ript type='text/javascript' src='" +
+                scJsHost+
+                "statcounter.com/counter/counter.js'></"+"script>");
+                </script>
+                <noscript><div class="statcounter"><a title="Web Analytics"
+                href="https://statcounter.com/" target="_blank"><img
+                class="statcounter"
+                src="https://c.statcounter.com/12505397/0/4085bf0d/0/"
+                alt="Web Analytics"
+                referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+                <!-- End of Statcounter Code -->
             </article>
           </div>
         </div>
