--- a/4_无线信道/S4_案例/index.html
+++ b/4_无线信道/S4_案例/index.html
@@ -2060,6 +2060,24 @@ padding: 2px;">图. 路径损耗、阴影衰落和窄带衰落的结合</div>
 
 
               
+              <!-- Default Statcounter code for iot-book
+              http://iot-book.github.io -->
+              <script type="text/javascript">
+                var sc_project=12505397; 
+                var sc_invisible=0; 
+                var sc_security="4085bf0d"; 
+                var scJsHost = "https://";
+                document.write("<sc"+"ript type='text/javascript' src='" +
+                scJsHost+
+                "statcounter.com/counter/counter.js'></"+"script>");
+                </script>
+                <noscript><div class="statcounter"><a title="Web Analytics"
+                href="https://statcounter.com/" target="_blank"><img
+                class="statcounter"
+                src="https://c.statcounter.com/12505397/0/4085bf0d/0/"
+                alt="Web Analytics"
+                referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+                <!-- End of Statcounter Code -->
             </article>
           </div>
         </div>
