link to homepage

--- a/6_数字调制与解调/S5_基带信号和载波上变频/index.html
+++ b/6_数字调制与解调/S5_基带信号和载波上变频/index.html
@@ -1868,10 +1868,11 @@
     <div class="md-footer-meta__inner md-grid">
       <div class="md-footer-copyright">
         
-          <div class="md-footer-copyright__highlight">
-            清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
-          </div>
-        
+        <!-- Made with -->
+        <a href="http://tns.thss.tsinghua.edu.cn/~jiliang/" target="_blank" rel="noopener">
+          &copy; 清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
+        </a>
+        <br>
         Made with
         <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
           Material for MkDocs
