--- a/14_无线追踪/S1_基于多普勒效应的追踪方法/index.html
+++ b/14_无线追踪/S1_基于多普勒效应的追踪方法/index.html
@@ -2051,10 +2051,11 @@ D_v  =  \frac{D_f}{f_0}c = \frac{f_sc}{f_0L_w}
     <div class="md-footer-meta__inner md-grid">
       <div class="md-footer-copyright">
         
-          <div class="md-footer-copyright__highlight">
-            清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
-          </div>
-        
+        <!-- Made with -->
+        <a href="http://tns.thss.tsinghua.edu.cn/~jiliang/" target="_blank" rel="noopener">
+          &copy; 清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
+        </a>
+        <br>
         Made with
         <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
           Material for MkDocs
