--- a/17_WiFi感知/S1_信道状态信息获取/index.html
+++ b/17_WiFi感知/S1_信道状态信息获取/index.html
@@ -1992,10 +1992,11 @@ sudo ln -s iwlwifi-5000-2.ucode.sigcomm2010 /lib/firmware/iwlwifi-5000-2.ucode
     <div class="md-footer-meta__inner md-grid">
       <div class="md-footer-copyright">
         
-          <div class="md-footer-copyright__highlight">
-            清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
-          </div>
-        
+        <!-- Made with -->
+        <a href="http://tns.thss.tsinghua.edu.cn/~jiliang/" target="_blank" rel="noopener">
+          &copy; 清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
+        </a>
+        <br>
         Made with
         <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
           Material for MkDocs
