--- a/17_WiFi感知/S3_案例：WiFI ToF测距/index.html
+++ b/17_WiFi感知/S3_案例：WiFI ToF测距/index.html
@@ -2041,10 +2041,11 @@ sudo ifconfig wlp2s0 up <span class="c1"># 改成当前的网卡接口名称</sp
     <div class="md-footer-meta__inner md-grid">
       <div class="md-footer-copyright">
         
-          <div class="md-footer-copyright__highlight">
-            清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
-          </div>
-        
+        <!-- Made with -->
+        <a href="http://tns.thss.tsinghua.edu.cn/~jiliang/" target="_blank" rel="noopener">
+          &copy; 清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
+        </a>
+        <br>
         Made with
         <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
           Material for MkDocs
