--- a/5_信号滤波/S5_切比雪夫&巴特沃斯/index.html
+++ b/5_信号滤波/S5_切比雪夫&巴特沃斯/index.html
@@ -2199,10 +2199,11 @@ padding: 2px;">图. 巴特沃斯滤波器（双线性变换法）</div>
     <div class="md-footer-meta__inner md-grid">
       <div class="md-footer-copyright">
         
-          <div class="md-footer-copyright__highlight">
-            清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
-          </div>
-        
+        <!-- Made with -->
+        <a href="http://tns.thss.tsinghua.edu.cn/~jiliang/" target="_blank" rel="noopener">
+          &copy; 清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
+        </a>
+        <br>
         Made with
         <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
           Material for MkDocs
