--- a/8_Backscatter通信/S3_新形式的Backscatter：从WiFi到LoRa/index.html
+++ b/8_Backscatter通信/S3_新形式的Backscatter：从WiFi到LoRa/index.html
@@ -1976,10 +1976,11 @@ k(t)=\frac{2 \sqrt{2}}{\pi}\sum^{\infty}_{n=0}\frac{1}{2n+1}e^{j2\pi (2n+1)f_{0}
     <div class="md-footer-meta__inner md-grid">
       <div class="md-footer-copyright">
         
-          <div class="md-footer-copyright__highlight">
-            清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
-          </div>
-        
+        <!-- Made with -->
+        <a href="http://tns.thss.tsinghua.edu.cn/~jiliang/" target="_blank" rel="noopener">
+          &copy; 清华大学 - 王继良 - jiliangwang@tsinghua.edu.cn
+        </a>
+        <br>
         Made with
         <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
           Material for MkDocs
