--- a/16_声波感知/S1_声波测距/index.html
+++ b/16_声波感知/S1_声波测距/index.html
@@ -2030,10 +2030,10 @@ D = \frac{1}{2}(d_{A,B}+d_{B,A})
 <p>​       化简后有：</p>
 <div>
 <div class="MathJax_Preview">
-D = \frac{𝑐}{2}[(𝑡_{𝐴3}−𝑡_{𝐴1})-(𝑡_{𝐵3}−𝑡_{𝐵1})]+𝑑_{𝐴,𝐴}+𝑑_{𝐵,𝐵}
+D = \frac{𝑐}{2}[(𝑡_{𝐴3}−𝑡_{𝐴1})-(𝑡_{𝐵3}−𝑡_{𝐵1})]+\frac{𝑑_{𝐴,𝐴}+𝑑_{𝐵,𝐵}}{2}
 </div>
 <script type="math/tex; mode=display">
-D = \frac{𝑐}{2}[(𝑡_{𝐴3}−𝑡_{𝐴1})-(𝑡_{𝐵3}−𝑡_{𝐵1})]+𝑑_{𝐴,𝐴}+𝑑_{𝐵,𝐵}
+D = \frac{𝑐}{2}[(𝑡_{𝐴3}−𝑡_{𝐴1})-(𝑡_{𝐵3}−𝑡_{𝐵1})]+\frac{𝑑_{𝐴,𝐴}+𝑑_{𝐵,𝐵}}{2}
 </script>
 </div>
 <p>其中<span><span class="MathJax_Preview">𝑑_{𝐴,𝐴}</span><script type="math/tex">𝑑_{𝐴,𝐴}</script></span>和<span><span class="MathJax_Preview">𝑑_{𝐵,𝐵}</span><script type="math/tex">𝑑_{𝐵,𝐵}</script></span>都和设备本身的设计有关，可以在测距之前提前测量得到。因此测距结果只和两个时间差<span><span class="MathJax_Preview">𝑡_{𝐴3}−𝑡_{𝐴1}</span><script type="math/tex">𝑡_{𝐴3}−𝑡_{𝐴1}</script></span>和<span><span class="MathJax_Preview">𝑡_{𝐵3}−𝑡_{𝐵1}</span><script type="math/tex">𝑡_{𝐵3}−𝑡_{𝐵1}</script></span>有关，并且两个时间差可以分别在设备<span><span class="MathJax_Preview">A</span><script type="math/tex">A</script></span>和设备<span><span class="MathJax_Preview">B</span><script type="math/tex">B</script></span>上测量出来，而不需要设备<span><span class="MathJax_Preview">A</span><script type="math/tex">A</script></span>和设备<span><span class="MathJax_Preview">B</span><script type="math/tex">B</script></span>进行时钟对齐。</p>
