--- a/6_数字调制与解调/S6_调制方法综合应用/index.html
+++ b/6_数字调制与解调/S6_调制方法综合应用/index.html
@@ -2114,6 +2114,22 @@ OQPSK方法是基于QPSK的I/Q调制方式，基本跟QPSK是类似的。I路信
 
               
             </article>
+            <!-- // % 评论 -->
+            <div id="container"></div>
+              <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+              <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+              <script>
+              var gitment = new Gitment({
+                id: 'location.href', 
+                owner: 'iot-book',
+                repo: 'Comments',
+                oauth: {
+                  client_id: 'ab5371b4172e50e09adb',
+                  client_secret: '792851320ee2902fe9c88bb7795e89592b108f77',
+                },
+              })
+              gitment.render('container')
+              </script> 
           </div>
         </div>
         
