--- a/10_可见光通信/S1_可见光通信/index.html
+++ b/10_可见光通信/S1_可见光通信/index.html
@@ -1835,6 +1835,22 @@ Li-Fi由于可见光具有可遮挡性，无法穿墙，因此便于将信号限
 
               
             </article>
+            <!-- // % 评论 -->
+            <div id="container"></div>
+              <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+              <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+              <script>
+              var gitment = new Gitment({
+                id: 'location.href', 
+                owner: 'iot-book',
+                repo: 'Comments',
+                oauth: {
+                  client_id: 'ab5371b4172e50e09adb',
+                  client_secret: '792851320ee2902fe9c88bb7795e89592b108f77',
+                },
+              })
+              gitment.render('container')
+              </script> 
           </div>
         </div>
         
