--- a/3_傅里叶分析/S1_傅里叶分析一段历史/index.html
+++ b/3_傅里叶分析/S1_傅里叶分析一段历史/index.html
@@ -1860,6 +1860,22 @@ padding: 2px;">图. 傅里叶男爵</div>
 
               
             </article>
+            <!-- // % 评论 -->
+            <div id="container"></div>
+              <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+              <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+              <script>
+              var gitment = new Gitment({
+                id: 'location.href', 
+                owner: 'iot-book',
+                repo: 'Comments',
+                oauth: {
+                  client_id: 'ab5371b4172e50e09adb',
+                  client_secret: '792851320ee2902fe9c88bb7795e89592b108f77',
+                },
+              })
+              gitment.render('container')
+              </script> 
           </div>
         </div>
         
