--- a/6_数字调制与解调/S5_基带信号和载波上变频/index.html
+++ b/6_数字调制与解调/S5_基带信号和载波上变频/index.html
@@ -1822,20 +1822,21 @@
               
             </article>
             <!-- // % 评论 -->
-            <div id="container"></div>
-              <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-              <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+            <div id="gitalk-container"></div>
+              <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+              <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
               <script>
-              var gitment = new Gitment({
-                id: 'location.href', 
-                owner: 'iot-book',
-                repo: 'Comments',
-                oauth: {
-                  client_id: 'ab5371b4172e50e09adb',
-                  client_secret: '792851320ee2902fe9c88bb7795e89592b108f77',
-                },
-              })
-              gitment.render('container')
+              var gitalk = new Gitalk({
+                  clientID: 'ab5371b4172e50e09adb',
+                  clientSecret: '792851320ee2902fe9c88bb7795e89592b108f77',
+                  repo: 'Comments',
+                  owner: 'iot-book',
+                  admin: ['iot-book', 'tongsh'],
+                  id: location.pathname,      // Ensure uniqueness and length less than 50
+                  distractionFreeMode: false  // Facebook-like distraction free mode
+                })
+
+                gitalk.render('gitalk-container')
               </script> 
           </div>
         </div>
