--- a/7_短距离无线通信技术/S4_案例（蓝牙）/index.html
+++ b/7_短距离无线通信技术/S4_案例（蓝牙）/index.html
@@ -2327,6 +2327,9 @@ padding: 2px;">图. 设备的广播模式和建立连接过程</div>
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
