--- a/10_可见光通信/S1_可见光通信/index.html
+++ b/10_可见光通信/S1_可见光通信/index.html
@@ -2120,6 +2120,9 @@ Li-Fi由于可见光具有可遮挡性，无法穿墙，因此便于将信号限
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
