--- a/15_传感器感知/S1_传感器原理/index.html
+++ b/15_传感器感知/S1_传感器原理/index.html
@@ -2281,6 +2281,9 @@ padding: 2px;">图. 传感器的技术性能指标</div>
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
