--- a/16_声波感知/S5_声波设备认证/index.html
+++ b/16_声波感知/S5_声波设备认证/index.html
@@ -2195,6 +2195,9 @@ padding: 2px;">图. 不同传播路径对声音信号的频率选择特性不同
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
