--- a/17_WiFi感知/S1_信道状态信息获取/index.html
+++ b/17_WiFi感知/S1_信道状态信息获取/index.html
@@ -2231,6 +2231,9 @@ sudo<span class="w"> </span>ln<span class="w"> </span>-s<span class="w"> </span>
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
