--- a/20_UWB感知/S2_UWB定位/index.html
+++ b/20_UWB感知/S2_UWB定位/index.html
@@ -2126,6 +2126,9 @@
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
