--- a/3_傅里叶分析/S1_傅里叶分析一段历史/index.html
+++ b/3_傅里叶分析/S1_傅里叶分析一段历史/index.html
@@ -2146,6 +2146,9 @@ padding: 2px;">图. 傅里叶男爵</div>
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
