--- a/4_无线信道/S4_案例/index.html
+++ b/4_无线信道/S4_案例/index.html
@@ -2311,6 +2311,9 @@ padding: 2px;">图. 路径损耗、阴影衰落和窄带衰落的结合</div>
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
