--- a/5_信号滤波/S4_IIR滤波器/index.html
+++ b/5_信号滤波/S4_IIR滤波器/index.html
@@ -2350,6 +2350,9 @@ padding: 2px;">图. 一阶IIR滤波器时域滤波效果。</div>
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
