--- a/6_数字调制与解调/S6_调制方法综合应用/index.html
+++ b/6_数字调制与解调/S6_调制方法综合应用/index.html
@@ -2400,6 +2400,9 @@ OQPSK方法是基于QPSK的I/Q调制方式，基本跟QPSK是类似的。I路信
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
