--- a/8_Backscatter通信/S1_Backscatter基础原理/index.html
+++ b/8_Backscatter通信/S1_Backscatter基础原理/index.html
@@ -2166,6 +2166,9 @@ padding: 2px;">图. RFID标签通过改变阻抗控制反射信号的振幅</div
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
