--- a/9_LoRa/S4_LoRa测试床/index.html
+++ b/9_LoRa/S4_LoRa测试床/index.html
@@ -2535,6 +2535,9 @@ Conference on Distributed Computing in Sensor Systems (DCOSS). IEEE, 263–268.<
               title: '感谢浏览\n 为了更好地了解读者信息\n 请留下您的联系方式',
               width: 600,
               color: '#716add',
+              showCancelButton: true,
+              cancelButtonColor: '#d33',
+              cancelButtonText: '暂不填写',
               background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
               confirmButtonText: '立即填写',
               backdrop: `
